--- a/index.html
+++ b/index.html
@@ -27,13 +27,19 @@
   <main>
     <section id="about">
       <p>About the stories</p>
+      <!--area for description of the series-->
     </section>
     <section id="products">
       <p>Include cover art for the books</p>
+      <!--card for Amazing Granny Fran-->
+      <!--card for Space Granny Fran-->
+      <!--card for Time Travel Granny Fran-->
     </section>
     <section id="people">
       <p>About the Author</p>
+      <!-- card for Brad Smith -->
       <p>About the Illustrator</p>
+      <!-- card for Cheyenne Smith -->
     </section>
   </main>
   <footer>
