update html and css to add image and headers

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
   <header>
-    <h1>Amazing Granny Fran Books</h1>
+    <p id="pageHeading">Amazing Granny Fran Books</p>
     <nav class="topNav" id="myTopNav">
       <a href="#home" class="active">Home</a>
       <a href="#news">News</a>
@@ -26,19 +26,28 @@
   </header>
   <main>
     <section id="about">
-      <p>About the stories</p>
+      <img src="images/logo-transparent-png.png" alt="Logo for Granny Fran with intials GF in center surrounded by Granny Fran * Adventures of Living With Granny">
+      <h1>Granny Fran Stories are Fun</h1>
+      <h2>And Great Life Lessons</h2>
+      <p>These stories are about five year-old Grace learning about her Grandmother Fran coming to live with them.</p>
+      <p>Being five years old and having your grandmother move in with you is an eye-opening experience. There is much to learn and Grace's amazing imagination makes the lessons so much fun.</p>
       <!--area for description of the series-->
     </section>
     <section id="products">
       <p>Include cover art for the books</p>
       <!--card for Amazing Granny Fran-->
+      <img src="images/amazingFran.jpg" alt="Granny Fran being fun with children">
       <!--card for Space Granny Fran-->
+      <img src="images/spaceFran.jpg" alt="Granny Fran gets her own space">
       <!--card for Time Travel Granny Fran-->
+      <img src="images/timeFran.jpg" alt="Granny Fran changing with the times">
     </section>
     <section id="people">
       <p>About the Author</p>
+      <img src="images/author.jpg" alt="Brad Smith Granny Fran author">
       <!-- card for Brad Smith -->
       <p>About the Illustrator</p>
+      <img src="images/illustrator.jpg" alt="Cheyene Smith the illustrator">
       <!-- card for Cheyenne Smith -->
     </section>
   </main>
